--- a/index.html
+++ b/index.html
@@ -6,7 +6,87 @@
 	<title>Here We Go!</title>
 </head>
 <body>
+	<nav>
+		<div class="nav-headings">
+			<h1>Title<span>goes here</span></h1>
+			<h1>About</h1>
+		</div>
+		<div class="dropdown">
+			<div class="close"></div>
+			<h1>lipsum</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis assumenda laborum maiores ullam, natus ut. Mollitia officiis animi enim accusantium. Libero reprehenderit explicabo quo tempore fugiat voluptas ea animi sit.</p>
+			<h1>Follow me on...</h1>
+			<div class="social">
+				<a href="#">
+					<i class="fa fa-twitter" aria-hidden="true"></i>
+				</a>
+				<a href="#">
+					<i class="fa fa-facebook" aria-hidden="true"></i>
+				</a>
+				<a href="#">
+					<i class="fa fa-instagram" aria-hidden="true"></i>
+				</a>
+				<a href="#">
+					<i class="fa fa-github" aria-hidden="true"></i>
+				</a>
+				<a href="#">
+					<i class="fa fa-dribbble" aria-hidden="true"></i>
+				</a>
+				<a href="#">
+					<i class="fa fa-linkedin" aria-hidden="true"></i>
+				</a>
+			</div>
+			<h1>Get in touch</h1>
+			<form action="">
+				<input type="text" placeholder="Name">
+				<input type="email" placeholder="Email">
+				<textarea placeholder="Message" rows="5"></textarea>
+				<input type="submit" value="Send">
+				<button class="reset">Reset</button>
+			</form>
+		</div>
+	</nav>
+	<main>
+		<div class="main-first">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-second">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-third">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-fourth">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-fifth">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-sixth">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-seventh">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-eighth">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-ninth">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-tenth">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-eleventh">
+			<h2>lorem ipsum</h2>
+		</div>
+		<div class="main-twelfth">
+			<h2>lorem ipsum</h2>
+		</div>
+	</main>
 
-<script src="public/scripts/main.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
+<script src="https://use.fontawesome.com/6c21e8b8e1.js"></script>
+<script src="public/scripts/main.js"></script>
 </body>
 </html>
